simplify transactions